# harness-helm

./: AGENTS.md  ARCHITECTURE.md  README.md  harness.yml  pyproject.toml
docs/: BACKEND.md  CODEREVIEW.md  DESIGN.md  FRONTEND.md  ISSUE_TRACKING.md  OPERATIONS.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  STACK.md  TESTING.md  TOOLING.md
src/helm/: __init__.py  __main__.py  app.py  cli.py  loader.py  refresh.py  store.py  watcher.py
src/helm/derive/: __init__.py  feature_state.py  work_item.py
src/helm/models/: __init__.py  capabilities.py  documents.py  feature_state.py  plan.py  requirements.py  work_item.py
src/helm/parsers/: __init__.py  capabilities.py  plan.py  requirements.py
src/helm/readers/: __init__.py  files.py
src/helm/ui/: __init__.py  state.py
src/helm/views/: __init__.py  document.py  overview.py  requirements.py
src/helm/widgets/: __init__.py  footer.py  header.py
tests/: test_loader.py
tests/fixtures/sample_feature/: fdd.md  plan.md  prd.md  requirements.yml
